fixed bugs on mobile devices

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -102,6 +102,7 @@
   @media (max-width: $breakpointTablet) {
     display: flex;
     flex-direction: column;
+    height: $navigationMobileHeight;
 
     .logo {
       flex-direction: row-reverse;
@@ -128,7 +129,7 @@
       width: 100%;
       z-index: 2;
       position: absolute;
-      top: $navigationDesktopHeight;
+      top: $navigationMobileHeight;
 
       .linkContainer {
         width: 100%;
@@ -308,6 +309,12 @@
     background-repeat: no-repeat;
     background-size: cover;
   }
+  @media(max-width: $breakpointTablet) {
+    height: auto;
+    img {
+      height: auto;
+    } 
+  }
 }
 
 .aboutUs {
@@ -380,6 +387,7 @@
       }
       div {
         width: 95%;
+        height: 45%;
         h1 {
           font-size: 28px;
           margin-top: 2vh;
